<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:layout_height="match_parent">




    <ImageView
        android:layout_width="60dp"
        android:layout_marginTop="120dp"
        android:background="@mipmap/ic_beifen"
        android:layout_height="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:text="@string/ac_sc_bp_word1"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:textColor="#D2D2D2"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/ac_sc_bp_word2"
        android:textStyle="bold"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>


    <TextView
       style="@style/btStyle"
        android:enabled="true"
        android:id="@+id/bt1"
        android:text="@string/ac_sc_bp_word3"
      />

    <TextView
        style="@style/btStyle"
        android:background="@color/white"
        android:textColor="#0471FF"
        android:text="@string/ac_sc_bp_word4"
        android:layout_marginTop="15dp"
        android:id="@+id/bt2"
        android:layout_marginBottom="52.5dp"
        />



</LinearLayout>