<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <include layout="@layout/title_bar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_5_corner_594b"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:enabled="false"
        android:gravity="center"
        android:id="@+id/title"

        android:text="@string/wrong_words"
        android:textColor="@color/white"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/rl_title"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/activity_start5"
            android:textColor="#333333"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="11dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:visibility="gone"
            android:textColor="#D2D2D2"
            android:text="@string/ac_resume_ball_tv2"
            android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_5_corner"

            android:layout_height="wrap_content">


        <MultiAutoCompleteTextView
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="22dp"
            android:id="@+id/et_pass"
            android:background="@color/color_eee"
            android:gravity="top"
            android:inputType=""
            android:paddingBottom="22dp"
            android:completionThreshold="1"
            android:textSize="16sp"
            android:dropDownHorizontalOffset="5dp"
            android:hint="@string/ac_resume_ball_tv3"
            android:textStyle="bold"
            android:textColorHint="#D2D2D2"
            android:textColor="@color/color_black_333"

            android:dropDownHeight="200dp"
            android:layout_height="200dp"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/ac_resume_ball_tv4"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:enabled="false"
        android:id="@+id/bt"
        android:background="@drawable/bt_enable_selector"
        android:layout_height="50dp"/>



</RelativeLayout>