<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <include
        android:id="@+id/rl_title"
        layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/rl_title"

        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/ac_money_pass_tv1"
            android:textColor="#333333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/ac_money_pass_tv2"
            android:textColor="#D2D2D2"
            android:textSize="16sp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_5_corner"
            android:singleLine="true"
            android:paddingLeft="15dp"
            android:paddingTop="22dp"
            android:paddingRight="15dp"
            android:paddingBottom="22dp"
            android:hint="@string/ac_regist3"
            android:inputType="textPassword"
            android:textColorHint="#D2D2D2"
            android:textSize="13sp"
            android:textStyle="bold" />
            <ImageView
                android:layout_width="40dp"
                android:padding="8dp"
                android:src="@mipmap/ic_nosee"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:id="@+id/iv_is_see"
                android:layout_height="40dp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creat_money_pass_ac1"

            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/color_tv_blue"
            android:textSize="12sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/et_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_5_corner"
            android:hint="@string/ac_money_pass_et2"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:paddingTop="22dp"
            android:paddingRight="15dp"
            android:inputType="textPassword"
            android:paddingBottom="22dp"
            android:textColorHint="#D2D2D2"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:textColor="#FF594B"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_pass_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_5_corner"
            android:hint="@string/ac_money_pass_et3"
            android:paddingLeft="15dp"
            android:paddingTop="22dp"
            android:singleLine="true"
            android:paddingBottom="22dp"
            android:textColorHint="#D2D2D2"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/bt_enable_selector"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/ac_money_pass_bt"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    </ScrollView>


</RelativeLayout>