<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="174dp"
    android:layout_height="220dp"
    android:layout_gravity="right"
    android:layout_marginTop="53dp"
    android:layout_marginRight="18dp"
    android:background="@drawable/shape_5_corner_white_all_dialog"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_coin_manange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="21dp"
            android:background="@mipmap/ic_coin_manage" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/coin_manage"
            android:textColor="#2a2e2f"
            android:textSize="12sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_set_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="21dp"
            android:background="@mipmap/ic_delete_psw" />


        <TextView
            android:id="@+id/tv_delete_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/destruction_wallet_pass"
            android:textColor="#2a2e2f"
            android:textSize="12sp" />


    </LinearLayout>






    <LinearLayout
        android:id="@+id/ll_backup_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="21dp"
            android:background="@mipmap/ic_icon_beifen" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/ac_main_tv2"
            android:textColor="#2a2e2f"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_language_type"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="21dp"
            android:background="@mipmap/ic_miandg_en" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/change_language"
            android:textColor="#2a2e2f"
            android:textSize="12sp" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="21dp"
            android:background="@mipmap/ic_check_new_usb" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/new_version"
            android:textColor="#2a2e2f"
            android:textSize="12sp" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="21dp"
            android:background="@mipmap/ic_about_us" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/about_us"
            android:textColor="#2a2e2f"
            android:textSize="12sp" />


    </LinearLayout>
</LinearLayout>